fix flex align issue in profile picture

--- a/src/components/home/left/left.css
+++ b/src/components/home/left/left.css
@@ -12,7 +12,6 @@
 .home_left_profile {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
     gap: 1rem;
 }
